富文本片段测试

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/update/demo1",
     "pages/notes/editor",
+    "pages/notes/rich-editor",
     "pages/voice/recorder"
   ],
   "window": {
