--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,7 @@
     "pages/index/index",
     "pages/update/demo1",
     "pages/notes/editor",
-    "pages/notes/rich-editor",
+    "pages/notes/editor-details",
     "pages/editor/preview",
     "pages/voice/recorder"
   ],
